tests/NormalTests/paczka1/small_fuzzy/31661134.err
Error in line 1: Vf9cJMwyhxf A780 59,3
Error in line 6: 1COHwweTm S822 33,4
